Sun Jan 16  8:57:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Don't log DnD stuff unless NSDragging logging
	is requested using '--GNU-Debug=NSDragging'

Sat Jan 15 11:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBrowser.m: Don't permit scrolling by negative values.

Sat Jan 15 07:29:37 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSavePanel.m ([-_initWithoutGModel]): Tidyup for
 	readability; use a NSButton for the application icon.

Fri Jan 14 07:03:14 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSliderCell.m ([-isFlipped]): Fixed typo, this method
 	was called 'isFliped'.

Fri Jan 14 04:33:21 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Work to improve appearance.
	* Source/NSBox.m ([-sizeToFit]): More space around title.
	([-calcSizesAllowingNegative:]): idem.
	* Source/NSBrowserCell.m ([-drawInteriorWithFrame:inView:]): Skip
 	2 points from left border before drawing text.
	* Source/NSButtonCell.m ([-cellSize]): Changed space between borders
 	and contents if needed; fixed font height.
  	([-drawInteriorWithFrame:inView:]): When drawing both image and
 	text, add space between image and border.
	* Source/NSCell.m ([-cellSize]): Fixed font height; removed
 	additional height; added space between border and contents if needed.
	([NSCell -editWithFrame:inView:editor:delegate:event:]): Added
 	spacing between border and contents.
  	([-selectWithFrame:inView:editor:delegate:start:length:]):
 	idem. ([-drawInteriorWithFrame:inView:]): Added spacing between
 	border and contents.	
	* Source/NSFormCell.m ([-cellSize]): Use super's cellSize.
  	([-cellSize]), ([-drawingRectForBounds:]),
 	([-drawWithFrame:inView:]): Changed spacing between title and
 	editable field to 3.
	* Source/NSForm.m 
	([-initWithFrame:mode:cellClass:numberOfRows:numberOfColumns:]),
	([-initWithFrame:mode:prototype:numberOfRows:numberOfColumns:]): 